Fix overflow and incorrect auth block on header (mobile)

--- a/src/less/blocks/search.less
+++ b/src/less/blocks/search.less
@@ -20,11 +20,20 @@
   display: flex;
   align-items: center;
   height: 48px;
-  padding: 0 @space;
   position: relative;
+  padding: 0 @space;
 
   &-opened {
     background: #f3f2f1;
+  }
+  
+  @media (max-width: 413px) {
+    padding: 0;
+    transition: padding 0.3s ease-out;
+
+    &-opened {
+      padding: 0 @space;
+    }
   }
 }
 
@@ -34,16 +43,13 @@
   border: none;
   margin: 0 @space 0;
 
-  @media @before-normal {
-    width: 160px;
-  }
-
-  @media @before-small {
+  @media (max-width: 768px) {
     width: 100%;
   }
 }
 
 .search__icon {
+  flex: none;
   cursor: pointer;
   margin-left: 10px;
   user-select: none;
